<resources>
    <string name="app_name">Go_Chat</string>
    <string name="login_page">Login_Page</string>

    <string name="email">이메일</string>
    <string name="password">비밀번호(6자리 이상)</string>
    <string name="name">이름</string>
    <string name="gender">성별</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="age">나이</string>

    <string name="signin">로그인</string>
    <string name="success_login">로그인 성공</string>
    <string name="failed_login">로그인 실패</string>

    <string name="signup">회원가입</string>
    <string name="success_signup">회원가입 성공</string>
    <string name="failed_signup">회원가입 실패</string>

    <string name="none_found"> none_found</string>
    <string name="none_paired"> none_paired</string>
    <string name="bluetooth_devices">블루투스 디바이스 목록</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="cancel">Cancel</string>


    <string name="connect">Connect</string>
    <string name="input_some_text">Input some text</string>
    <string name="send">send</string>

    <string name="create_user">등록</string>
    <string name="input_age">나이를 입력하시오</string>
    <string name="password_show">비밀번호 나타내기</string>

</resources>