<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_devices"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <ImageButton
            android:id="@+id/bluetooth_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxWidth="50dp"
            android:src="@drawable/bluetooth"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/white"
            />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices"
        android:textColor="@color/black"/>

    <ListView
        android:id="@+id/pairedDeviceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovered_devices"
        android:textColor="@color/black"/>

    <ListView
        android:id="@+id/discoveredDeviceList"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>